Fixed Media Queries and Bottom Background Collapse

--- a/style.css
+++ b/style.css
@@ -2,12 +2,9 @@
 
 * {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 :root {
-  /* Primary Colors */
   --count-up: hsl(163, 72%, 41%);
   --count-down: hsl(356, 69%, 56%);
 
@@ -19,25 +16,30 @@
   --dark-mode-on: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
   --dark-mode-off: hsl(230, 22%, 74%);
 
-  /* Dark Theme Colors */
-  --very-dark-blue: hsl(232, 19%, 15%);
-  --dark-desaturated-blue: hsl(228, 28%, 20%);
-  --desaturated-blue: hsl(228, 34%, 66%);
-  --white: hsl(0, 0%, 100%);
-
-  /* Light Theme Colors */
-  --white: hsl(0, 0%, 100%);
-  --very-pale-blue: hsl(225, 100%, 98%);
-  --light-grayish-blue: hsl(227, 47%, 96%);
-  --mid-grayish-blue: hsl(232, 33%, 91%);
-  --dark-grayish-blue: hsl(228, 12%, 44%);
-  --very-dark-blue: hsl(230, 17%, 14%);
+  --white: hsl(60, 100%, 100%);
+  --black: hsl(225, 20%, 12%);
 }
 
-/* Desktop Styling */
-body {
-  scroll-behavior: smooth;
-  font-family: "Inter", sans-serif;
+/* Dark Theme Colors */
+.dark-theme {
+  --bg-top: hsl(232, 19%, 16%);
+  --bg-bottom: hsl(225, 17%, 14%);
+  --bg-card: hsl(228, 29%, 20%);
+  --bg-card-hover: hsl(228, 26%, 27%);
+  --title-color: hsl(227, 25%, 67%);
+  --text-color: var(--white);
+  transition: all 0.3s ease-out;
+}
+
+/* Light Theme Colors */
+.light-theme {
+  --bg-top: hsl(225, 100%, 98%);
+  --bg-bottom: hsl(0, 0%, 100%);
+  --bg-card: hsl(227, 47%, 96%);
+  --bg-card-hover: hsl(232, 33%, 91%);
+  --title-color: hsl(231, 6%, 46%);
+  --text-color: var(--black);
+  transition: all 0.3s ease-out;
 }
 
 .no-select {
@@ -50,10 +52,17 @@ body {
   user-select: none;
 }
 
+/* Desktop Styling */
+body {
+  scroll-behavior: smooth;
+  font-family: "Inter", sans-serif;
+  color: var(--text-color);
+}
+
 /* Header Styling */
 header {
   height: 30vh;
-  background: var(--very-pale-blue);
+  background: var(--bg-top);
   padding: 3rem 0;
 }
 
@@ -76,7 +85,7 @@ header {
 .branding p {
   font-size: 0.9rem;
   font-weight: 700;
-  color: var(--dark-grayish-blue);
+  color: var(--title-color);
   margin-top: 0.5rem;
 }
 
@@ -91,7 +100,7 @@ hr {
 
 .dark-mode span {
   font-weight: 700;
-  color: var(--desaturated-blue);
+  color: var(--text-color);
 }
 
 input {
@@ -128,8 +137,14 @@ input:checked:before {
 }
 
 /* Main Styling */
+main {
+  background: var(--bg-bottom);
+}
+
 .main {
-  margin-top: -5%;
+  height: 70vh;
+  position: relative;
+  top: -10vh;
 }
 
 /* Global Cards Styling */
@@ -137,7 +152,7 @@ input:checked:before {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.5rem 2rem;
-  margin-bottom: 3rem;
+  padding-bottom: 4rem;
 }
 
 .card-item {
@@ -146,10 +161,9 @@ input:checked:before {
   justify-content: center;
   align-items: center;
   padding: 1.5rem;
-  background: var(--light-grayish-blue);
+  background: var(--bg-card);
   margin-top: 5px;
   cursor: pointer;
-  color: var(--very-dark-blue);
   border-radius: 0.4rem;
 }
 
@@ -158,7 +172,7 @@ input:checked:before {
 }
 
 .card-item:hover {
-  background: var(--mid-grayish-blue);
+  background: var(--bg-card-hover);
 }
 
 /* Followers and Subscribers Cards */
@@ -203,7 +217,7 @@ input:checked:before {
   margin-left: 0.5rem;
   font-weight: 700;
   font-size: 0.8rem;
-  color: var(--dark-grayish-blue);
+  color: var(--title-color);
 }
 
 .card-item p:first-of-type {
@@ -213,7 +227,7 @@ input:checked:before {
 
 .card-item p:last-of-type {
   font-size: 0.8rem;
-  color: var(--dark-grayish-blue);
+  color: var(--title-color);
   margin: 0.5rem 0 1.5rem 0;
   letter-spacing: 3px;
 }
@@ -223,7 +237,7 @@ input:checked:before {
   padding: 0 0 1.5rem;
   font-size: 1.5rem;
   font-weight: 700;
-  color: var(--dark-grayish-blue);
+  color: var(--title-color);
 }
 
 .overview {
@@ -236,7 +250,7 @@ input:checked:before {
 .overview span {
   font-size: 0.9rem;
   font-weight: 700;
-  color: var(--dark-grayish-blue);
+  color: var(--title-color);
 }
 
 .other-count {
@@ -261,7 +275,7 @@ span.count-down {
 @media screen and (max-width: 500px) {
   header {
     height: auto;
-    background: var(--white);
+    background: var(--bg-bottom);
     padding: 3rem 0;
   }
 
@@ -289,11 +303,13 @@ span.count-down {
 
   .dark-mode span {
     font-weight: 700;
-    color: var(--dark-grayish-blue);
+    color: var(--title-color);
   }
 
   .main {
-    margin-top: 0%;
+    top: unset;
+    height: unset;
+    /* min-height: 70vh; */
   }
 
   .card {
@@ -305,7 +321,7 @@ span.count-down {
 @media screen and (min-width: 501px) and (max-width: 999px) {
   header {
     height: auto;
-    background: var(--white);
+    background: var(--bg-bottom);
   }
 
   .wrapper {
@@ -328,26 +344,17 @@ span.count-down {
 
   .dark-mode span {
     font-weight: 700;
-    color: var(--dark-grayish-blue);
+    color: var(--title-color);
+  }
+
+  .main {
+    top: unset;
+    height: unset;
+    /* min-height: 70vh; */
   }
 
   .card {
     grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-/* Small Desktop */
-@media screen and (min-width: 1000px) and (max-width: 1439px) {
-  .wrapper {
-    max-width: calc(100vw);
-    margin: 0 auto;
-  }
-  .main {
-    margin-top: -8%;
-  }
-
-  .card {
-    grid-template-columns: repeat(4, 1fr);
   }
 }
 
